--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.9",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "wouter": "^3.0.1"
