--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@protobuf-ts/grpcweb-transport": "^2.9.3",
     "@protobuf-ts/plugin": "^2.9.3",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "ag-grid-react": "^31.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
